feat: add pagination to car and order lists

--- a/autoservice/templates/cars.html
+++ b/autoservice/templates/cars.html
@@ -2,9 +2,27 @@
 
 {% block content %}
 <h1>Cars:</h1>
-{% for car in cars %}
+{% for car in object_list %}
 	<li>
 		<a href="{% url 'specific_car' car.car_id %}">{{car.car_model}} - {{car.car_model.engine}} - ({{car.client}})</a>
 	</li>
 {% endfor %}
+
+  <div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; pirmas</a>
+            <a href="?page={{ page_obj.previous_page_number }}">atgal</a>
+        {% endif %}
+
+        <span class="current">
+            {{ page_obj.number }} iš {{ page_obj.paginator.num_pages }}
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">pirmyn</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">paskutinis &raquo;</a>
+        {% endif %}
+    </span>
+</div>
 {% endblock %}
