--- a/autoservice/templates/orders.html
+++ b/autoservice/templates/orders.html
@@ -7,4 +7,25 @@
 		<a href="{% url 'specific_order' order.order_list_id %}">{{order}}</a>
 	</li>
 {% endfor %}
+
+<div class="container puslapiai">
+    <nav aria-label="...">
+        {% if orders.has_other_pages %}
+            <ul class="pagination pagination-sm justify-content-end">
+                {% for i in orders.paginator.page_range %}
+                    {% if orders.number == i %}
+                        <li class="page-item active">
+                            <a class="page-link">{{ i }}</a>
+                        </li>
+                    {% else %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                        </li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+        {% endif %}
+    </nav>
+</div>
+
 {% endblock %}
