--- a/autoservice/templates/base.html
+++ b/autoservice/templates/base.html
@@ -22,6 +22,9 @@
 							<li><a href="{% url 'services' %}">Services</a></li>
 							<li><a href="{% url 'orders' %}">Orders</a></li>
 						</ul>
+						<form action="{% url 'search_cars' %}" method="get" class="form-inline my-2 my-md-0">
+							<input name="query" class="form-control" type="text" placeholder="Search car">
+						</form>
 					{% endblock %}
 				</div>
 				<div class="col-sm-10 ">
