--- a/autoservice/templates/specific_car.html
+++ b/autoservice/templates/specific_car.html
@@ -13,5 +13,6 @@
 <h4>Licence plate nr: {{car.plate_nr}}</h4>
 <h4>Vin nr: {{car.vin_number}}</h4>
 <p>Owner: {{car.client}}</p>
+<p>{{car.description | safe}}</p>
 
 {% endblock %}
