--- a/autoservice/templates/base.html
+++ b/autoservice/templates/base.html
@@ -26,7 +26,7 @@
 								<li><a href="{% url 'logout'%}?next=/">Logout</a></li>
 							{% else %}
 								<li><a href="{% url 'login' %}">Login</a></li>
-								<li><a href="#">Register</a></li>
+								<li><a href="{% url 'register' %}">Register</a></li>
 							{% endif %}
 						</ul>
 						<form action="{% url 'search_cars' %}" method="get" class="form-inline my-2 my-md-0">
@@ -35,6 +35,14 @@
 					{% endblock %}
 				</div>
 				<div class="col-sm-10 ">
+					{% if messages %}
+						{% for message in messages %}
+							<div class="alert alert-{% if message.tags == 'error' %}danger{% elif message.tags == 'info' %}info{% elif message.tags == 'success' %}success{% endif %}" role="alert">
+									{{ message }}
+							</div>
+						{% endfor %}
+					{% endif %}
+
 					{% block content %}
 					{% endblock %}
 				</div>
